# E2B

./: .dockerignore  .editorconfig  .env.example  .env.template  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .golangci.yml  .goreleaser.yml  .lintstagedrc.js  .npmrc  .oxlintrc.json  .prettierignore  .terraform.lock.hcl  .tool-versions  .vale.ini  .vercelignore  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DEBUGGER_PRODUCT.md  DEV.md  DEVELOPMENT_SETUP.md  Dockerfile  ENVS.md  FORK-CUSTOMIZATIONS.md  ISSUES.md  LICENSE  LLM.md  Makefile  NEW_PROVIDER_EXAMPLE.md  OTEL-initializer.ts  PLAN.md  PR_789_CHANGES_SUMMARY.md  PR_789_REVIEW_COMMENTS_TO_ADDRESS.md  (+56 more)
.github/: api.yml  (+6 more)
api-service/: .dockerignore  .gitignore  Dockerfile  Makefile  app.py  broker.py  cli.py  could-not-parse-llm-output.txt  deploy_test.py  generate.py  json_rpc.py  langchain_basics.ipynb  main.py  openapi.json  playground_client_README.md  pyproject.toml  requirements.txt  run.py  start.sh  test.py  worker.js
api-service/.openapi-generator/: FILES
api-service/agent/: _smol.py  base.py  basic_agent.py  from_template.py  json_rpc.py  json_rpc_connector.py  memory.py  repo_agent.py  simple_agent.py  smol_agent.py  stripe_agent.py  ws.py
api-service/agent/output/: output_stream_parser.py  parse_output.py  token_callback_handler.py
api-service/agent/tokens/: log_parser.py  log_processor.py  log_queue.py  logs.py  token_streamer.py
api-service/agent/tools/: async_tool.py  base.py
api-service/api_service/aicode/: base.py
api-service/cf-worker-template/: .gitignore  .prettierrc  README.md  index.js  package-lock.json  package.json  wrangler.template.toml  wrangler.toml
api-service/codegen/: __init__.py  base.py  callback_handler.py  codegen.py  env.py  human_input.txt  out.txt  prompt.py  prompt_old.py
api-service/codegen/agent/: __init__.py  base.py  parsing.py
api-service/codegen/callbacks/: log_parser.py  log_processor.py  log_queue.py  logs.py
api-service/codegen/db/: base.py
api-service/codegen/js_agent/: __init__.py  agent.py  base.py  prompt.py
api-service/codegen/tools/: __init__.py  async_tool.py
api-service/database/: __init__.py  client.py  database.py  realtime.py
api-service/deployment/: __init__.py  adapter.py  deploy.py  in_memory.py  library_deployment.py  manager.py  stateless.py
api-service/models/: __init__.py  base.py
api-service/models/providers/: banana.py  hugging_face.py  replicate.py
api-service/models/wrappers/: huggingface_endpoint.py  replicate.py
api-service/playground/: nodemon-tsoa.json  nodemon.json  package-lock.json  package.json  swagger.json  tsconfig.json  tsoa.json
api-service/playground/scripts/: build.js
api-service/playground/src/: app.ts  server.ts
api-service/playground_client/: Makefile  __init__.py  api_client.py  base.py  configuration.py  main.py  openapi_client_README.md  playground.py  rest.py
api-service/playground_client/.openapi-generator/: FILES
api-service/playground_client/api/: __init__.py  default_api.py
api-service/playground_client/docs/: CreateDeploymentRequest.md  CreateMockBodyDataRequest.md  CreateMockDataRequest.md  CreateSessionResponse.md  CreateSessionsRequest.md  DefaultApi.md  DeploymentResponse.md  File.md  MockDataResponse.md  MockDataResponseBodyData.md  MockDataResponseMockData.md  OutStderrResponse.md  OutStdoutResponse.md  ProcessResponse.md  RunProcessParams.md  RunProcessResponse.md  SessionResponse.md  StartProcessParams.md  ToolsHumanResponse.md  ToolsLogOutput.md  (+1 more)
api-service/scripts/: generate-playground-client.sh
api-service/session/: __init__.py  api.py  deploy.py  env.py  session.py
api-service/test/: conftest.py  test_action_parsing.py  test_incomplete_action_parsing.py  test_simple_format_action_parsing.py
test_python/: pyproject.toml
test_python/test_python/: main.py
(+3494 files in other folders)
