[tool.poetry]
name = "codegen"
version = "0.1.0"
description = ""
authors = ["Devbook <hello@usedevbook.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
python-dateutil = "^2.8.2"
urllib3 = "^1.26.14"
pydantic = "^1.10.6"
aenum = "^3.1.11"
openai = "^0.27.0"
lxml = "^4.9.2"
asyncio = "^3.4.3"
postgrest = "^0.10.6"
replicate = "^0.8.1"
huggingface-hub = "^0.13.4"
anthropic = "^0.2.6"
banana-dev = "4.0.2"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi = "^0.95.1"
langchain = "0.0.141"
chevron = "^0.14.0"
chromadb = "^0.3.22"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.0"
pytest = "^7.2.2"

[tool.poetry.group.deploy]
optional = true

[tool.poetry.group.deploy.dependencies]
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"
