[tool.poetry]
name = "test-python"
version = "0.1.0"
description = ""
authors = ["Vasek Mlejnsky <vasek.mlejnsky@gmail.com>"]
readme = "README.md"
packages = [{include = "test_python"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.0"
langchain = { git = "https://github.com/mlejva/langchain", branch = "agents-with-openaichat" }



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
