[tool.poetry]
name = "e2b-docs-python-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "e2b_docs_python_code"}]

[tool.poetry.dependencies]
python = "^3.10"
e2b = "^0.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
